# halendar

./: .gitignore  README.md  halendar.cabal  halendar.sublime-project
snaplets/heist/templates/: _error.tpl  _signupsuccess.tpl  about.tpl  base.tpl  index.tpl  navigation.tpl  signin.tpl  signup.tpl
snaplets/heist/templates/calendar/: agenda.tpl  day.tpl  month.tpl  year.tpl
snaplets/heist/templates/event/: delete.tpl  new.tpl  view.tpl
snaplets/sqlite-auth/: devel.cfg
src/: Application.hs  Db.hs  Main.hs  Time.hs
static/: favicon.xcf  style.css
