Name:                halendar
Version:             0.1
Synopsis:            The Haskell Calendar
Description:         Calendar web application using the Snap Framework
License:             GPL-3
Author:              Ward Muylaert
Maintainer:          ward.muylaert@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Executable halendar
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      ==4.6.*  ,
    bytestring                ==0.10.* ,
    snap-core                 ==0.9.*  ,
    snap                      ==0.13.* ,
    lens                      ==3.10.* ,
    snaplet-sqlite-simple     ==0.4.*  ,
    sqlite-simple             ==0.4.*  ,
    text                      ==0.11.* ,
    time                      ==1.4.*  ,
    heist                     ==0.13.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
